[gd_scene load_steps=4 format=3 uid="uid://dekm1l6us63sn"]

[ext_resource type="Script" path="res://Level/Ui/level_paused/level_paused.gd" id="1_kv742"]
[ext_resource type="PackedScene" uid="uid://c8ooqf11406nm" path="res://Ui/SettingsMenu.tscn" id="2_q5jgl"]

[sub_resource type="LabelSettings" id="LabelSettings_tr683"]
font_size = 42

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 320.0
offset_top = 180.0
offset_right = 320.0
offset_bottom = 180.0

[node name="LevelPaused" type="CenterContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_kv742")

[node name="Panel" type="PanelContainer" parent="LevelPaused"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="LevelPaused/Panel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LevelPaused/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="LevelPaused/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="LevelPaused/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_tr683")

[node name="Button2" type="Button" parent="LevelPaused/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="VSeparator" type="VSplitContainer" parent="LevelPaused/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button3" type="Button" parent="LevelPaused/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Respawn"

[node name="VSeparator3" type="VSplitContainer" parent="LevelPaused/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button4" type="Button" parent="LevelPaused/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="VSeparator2" type="VSplitContainer" parent="LevelPaused/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SettingsButton" type="Button" parent="LevelPaused/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="VSeparator4" type="VSplitContainer" parent="LevelPaused/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="LevelPaused/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="SettingsMenu" parent="." instance=ExtResource("2_q5jgl")]
process_mode = 2
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0

[connection signal="exit" from="SettingsMenu" to="LevelPaused" method="_on_settings_menu_exit"]
